--- a/public/index.html
+++ b/public/index.html
@@ -9,65 +9,65 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--favicon icon-->
-  <link rel="icon" type="image/png" href="./assets/images/fav.png" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/fav.png" />
   <title>Fantasy Kingdom</title>
   <!-- google font -->
   <link
     href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900|Rubik:300,400,500,700,900&display=swap"
     rel="stylesheet">
   <!--bootstrap css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
   <!--fontawesome css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/font-awesome.min.css" />
   <!--meanmenu css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/meanmenu.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/meanmenu.css">
   <!-- animate css -->
-  <link rel="stylesheet" href="./assets/css/animate.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css">
   <!--owl-carousel css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/owl.carousel.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/owl.carousel.css" />
   <!-- youtube popup -->
-  <!-- <link rel="stylesheet" href="./assets/css/YouTubePopUp.css"> -->
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/YouTubePopUp.css"> -->
   <!-- magnific popup css -->
-  <!-- <link rel="stylesheet" href="./assets/css/magnific-popup.css"> -->
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/magnific-popup.css"> -->
   <!-- nice select css -->
-  <link rel="stylesheet" href="./assets/css/nice-select.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/nice-select.css">
   <!-- slick css-->
-  <!-- <link rel="stylesheet" href="./assets/css/slick.min.css"> -->
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick.min.css"> -->
   <!--style css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css" />
   <!--responsive css-->
-  <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/responsive.css" />
 </head>
 
 <body>
   <div id="root"></div>
   <!-- modernizr v.3.5.0 js -->
-  <script src="./assets/js/modernizr-3.5.0.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/modernizr-3.5.0.min.js"></script>
   <!-- jquery main js -->
-  <script src="./assets/js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
   <!-- bootstrap 4.0.0 js -->
-  <script src="./assets/js/bootstrap-popup.min.js"></script>
-  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/bootstrap-popup.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
   <!-- meanmenu js -->
-  <script src="./assets/js/jquery.meanmenu.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/jquery.meanmenu.js"></script>
   <!-- wow js -->
-  <script src="./assets/js/wow.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/wow.min.js"></script>
   <!-- magnific popup -->
-  <!-- <script src="./assets/js/jquery.magnific-popup.min.js"></script> -->
+  <!-- <script src="%PUBLIC_URL%/assets/js/jquery.magnific-popup.min.js"></script> -->
   <!-- nice select js -->
-  <script src="./assets/js/jquery.nice-select.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/jquery.nice-select.min.js"></script>
   <!-- owl.carousel js -->
-  <script src="./assets/js/owl.carousel.min.js"></script>
-  <script src="./assets/js/imagesloaded.pkgd.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/owl.carousel.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/imagesloaded.pkgd.min.js"></script>
   <!-- Youtube Player js-->
-  <!-- <script src="./assets/js/jquery.mb.YTPlayer.min.js"></script> -->
-  <!-- <script src="./assets/js/YouTubePopUp.jquery.js"></script> -->
+  <!-- <script src="%PUBLIC_URL%/assets/js/jquery.mb.YTPlayer.min.js"></script> -->
+  <!-- <script src="%PUBLIC_URL%/assets/js/YouTubePopUp.jquery.js"></script> -->
   <!-- slick js -->
-  <!-- <script src="./assets/js/slick.min.js"></script> -->
+  <!-- <script src="%PUBLIC_URL%/assets/js/slick.min.js"></script> -->
   <!--google map key-->
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGbZZgmiB1CReNYWObnzNlnVy6iE09na0"></script> -->
   <!-- main js -->
-  <script src="./assets/js/main.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/main.js"></script>
 </body>
 
 </html>
