--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--favicon icon-->
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/fav.png" />
+  <!-- <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/fav.png" /> -->
   <title>Fantasy Kingdom</title>
   <!-- google font -->
   <link
