Room available check

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--favicon icon-->
   <!-- <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/fav.png" /> -->
-  <title>Fantasy Kingdom</title>
+  <title title="%PUBLIC_URL%">Fantasy Kingdom</title>
   <!-- google font -->
   <link
     href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900|Rubik:300,400,500,700,900&display=swap"
